fix overflow issue

--- a/src/layout/AppLayout.module.scss
+++ b/src/layout/AppLayout.module.scss
@@ -14,5 +14,5 @@
 }
 
 .sidebarModifier {
-  height: 100vh;
+  // height: 100vh;
 }
